# vault-assistant

./: .env.example  .gitignore  CAPTURE_AUDIT_RESULTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.processor  IMPROVEMENTS.md  LICENSE  QUICKSTART.md  README.md  TEST_CAPTURE_CASES.md  TEST_CASES.md  com.vaultassistant.plist  com.vaultassistant.processor.plist  config.py  docker-compose.yml  main.py  mcp_server.py  processor.py  processor_scheduler.py  pyproject.toml  test_audio.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-build.yml  integration-test.yml  scheduled.yml  test.yml
docs/: ARCHITECTURE.md  DOCKER.md  INSTALLATION.md
indexer/: __init__.py  checkpoint.py  chunker.py  embedder.py  store.py  vocab_builder.py  watcher.py
llm/: __init__.py  conversation.py  ollama.py  tool_handler.py
rag/: __init__.py  keyword_search.py  query_decomposer.py  query_expander.py  reranker.py  retriever.py
tests/: __init__.py  conftest.py  test_categorization.py  test_compound_questions.py  test_indexing.py  test_integration_docker.py  test_mcp_tools.py  test_mcp_tools_stress.py  test_rag_optimizations.py
transcription/: __init__.py  vocab.py  whisper.py
vault/: __init__.py  deduplicator.py  logger.py  unprocessed.py  writer.py
