[project]
name = "vault-assistant"
version = "0.1.0"
description = "Voice-driven personal knowledge base backend for macOS"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "lancedb>=0.3.0",
    "pyarrow>=13.0.0",
    "watchdog>=3.0.0",
    "mlx-whisper>=0.1.0; platform_system == 'Darwin'",
    "faster-whisper>=0.10.0",
    "ollama>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-python-dotenv>=1.0.0",
]

[tool.mypy]
ignore_missing_imports = true
python_version = "3.11"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
